<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:padding="5dp"
    android:background="#F1F6F6"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        app:cardBackgroundColor="@android:color/white"
        app:cardCornerRadius="10dp"
        app:contentPadding="2dp"
        app:cardElevation="2dp"
        app:cardUseCompatPadding="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/title1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/product_name"
                android:fontFamily="sans-serif-condensed-medium"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/LineTwo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed-medium"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="@+id/title1"
                app:layout_constraintStart_toStartOf="@+id/title1"
                app:layout_constraintTop_toBottomOf="@+id/title1"
                android:text="@string/category" />

            <TextView
                android:id="@+id/LineThree"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:fontFamily="sans-serif-condensed"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="@+id/title1"
                app:layout_constraintStart_toStartOf="@+id/LineTwo"
                app:layout_constraintTop_toBottomOf="@+id/LineTwo"
                android:text="@string/brand_name" />

            <TextView
                android:id="@+id/quoteSpan"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="8dp"
                android:background="#F1F6F6"
                android:fontFamily="serif-monospace"
                android:padding="5dp"
                android:textStyle="bold"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@+id/LineDate"
                app:layout_constraintEnd_toEndOf="@+id/title1"
                app:layout_constraintStart_toStartOf="@+id/title1"
                app:layout_constraintTop_toBottomOf="@+id/LineThree"
                app:layout_constraintVertical_bias="0.0"
                android:text="@string/top_review" />

            <TextView
                android:id="@+id/LineDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:textSize="12sp"
                android:fontFamily="sans-serif-light"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/title1"
                android:text="@string/date" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</LinearLayout>